style/custom.css
/* @import url("https://fonts.googleapis.com/css2?family=DotGothic16&display=swap"); */
/* https://fonts.google.com/knowledge/using_type/using_web_fonts */

@font-face {
  font-family: 'DotGothic16';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(../fonts/dotgothic16/v18/v6-QGYjBJFKgyw5nSoDAGH7M6X8.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

:root {
    --bs-letter-spacing: 0.1em;
    --bs-body-font-family: "DotGothic16", sans-serif;
    --bs-dark-color: rgba(0, 0, 0, 0.966); /* changing the value dark for a black */
}

h1 {
    font-weight: 600;
    letter-spacing: var(--bs-letter-spacing);
}

body {
}

main {
    letter-spacing: var(--bs-letter-spacing);
}

.vertical {
    border-left: 6px dashed rgb(255, 255, 255);
    height: 100%;
    position: absolute;
    left: 50%;
}

